--- a/index.html
+++ b/index.html
@@ -35,9 +35,16 @@
 
         <section class="hero">
 
-            <h1 class="hero__title">Will Reidy</h1>
+            <div class="hero__text">
+                
+                <h1 class="hero__title">Will Reidy</h1>
 
-            <p class="hero__intro">An experienced Cambridge DELTA-qualified English tutor with significant international and corporate experience in London and Madrid.</p>
+                <p class="hero__intro">An experienced Cambridge <strong>DELTA-qualified English tutor</strong> with significant international and corporate experience in London and Madrid.</p>
+
+            </div>
+
+            <!-- Add background image on mobile -->
+            <div class="hero__image"></div>
 
         </section>
 
