--- a/index.html
+++ b/index.html
@@ -174,20 +174,21 @@
             <!-- Need to insert action -->
             <form class="form" id="enquiryform" action="test" method="POST">
 
-                <h2>Please fill in your details&hellip;</h2>
+                <h2 class="form__title">Make an enquiry&hellip;</h2>
+                <p class="form__intro">Please fill in your details and I'll be in touch within 48 hours.&hellip;</p>
 
                 <div class="form__fields">
 
                     <div class="form__field">
                         <input id="firstname" class="form__input" name="firstname" type="text" value="" placeholder="First name" />
                         <!-- {{ svg.use('icn_name', 'line-icon size22 competition-form__input__icon') }} -->
-                        <span id="firstNameError" class="form__error-message">Please enter your first name</span>
+                        <div id="firstNameError" class="form__error-message">Please enter your first name</div>
                     </div>
 
                     <div class="form__field">
                         <input id="lastname" class="form__input" name="lastname" type="text" value="" placeholder="Last name" />
                         <!-- {{ svg.use('icn_name', 'line-icon size22 competition-form__input__icon') }} -->
-                        <span id="lastNameError" class="form__error-message">Please enter your last name</span>
+                        <div id="lastNameError" class="form__error-message">Please enter your last name</div>
                     </div>
 
                     <div class="form__field">
@@ -195,16 +196,20 @@
                         <!-- {{ svg.use('icn_name', 'line-icon size22 competition-form__input__icon') }} -->
                     </div>
 
+                </div>
+
+                <div class="form__fields">
+
                     <div class="form__field">
                         <input id="email" class="form__input js-email-input" name="email" type="email" value="" placeholder="Email Address" />
                         <!-- {{ svg.use('icn_email', 'line-icon size22 competition-form__input__icon') }} -->
-                        <span id="emailAddressError" class="form__error-message">Please enter a valid email address</span>
+                        <div id="emailAddressError" class="form__error-message">Please enter a valid email address</div>
                     </div>
 
                     <div class="form__field">
                         <input id="mobile" class="form__input" name="phone" type="text" value="" placeholder="Mobile" />
                         <!-- {{ svg.use('icn-phone', 'line-icon size22 competition-form__input__icon') }} -->
-                        <span id="mobileError" class="form__error-message">Please enter a valid phone number</span>
+                        <div id="mobileError" class="form__error-message">Please enter a valid phone number</div>
                     </div>
 
                 </div>
@@ -221,9 +226,9 @@
 
                 </div>
 
-                <textarea name="comment" form="enquiryform" placeholder="Enter your additional notes here">
-                    Enter text here...
-                </textarea>
+                <p class="form__comments">Please enter additional information here</p>
+
+                <textarea class="form__comment" name="comment" form="enquiryform" placeholder="Enter your additional notes here">Enter text here&hellip;</textarea>
 
                 <div class="form__submit">
                     <button id="submit" name="submit" type="submit" class="form__button form__button--submit js-track" data-label="form-submit-button">Submit</button>
