--- a/index.html
+++ b/index.html
@@ -136,14 +136,13 @@
                     </p>
                     <ul class="grid__list">
                         <li class="grid__list-item">Fun, engaging lessons, tailored to your needs</li>
-                        <li class="grid__list-item">Regular progress reports</li>
                         <li class="grid__list-item">We can focus your business English on a particular profession, such as technology or banking</li>
-                        <li class="grid__list-item">Lessons notes available online</li>
-                        <li class="grid__list-item">Personalised homework assignments</li>
+                        <li class="grid__list-item">Regular progress reports</li>
+                        <li class="grid__list-item">Personalised homework assignments &amp; lesson notes available online</li>
                     </ul>
-                    <button class="grid__cta">
+                    <a href="#form" class="grid__cta">
                         Make an enquiry
-                    </button>               
+                    </a>               
                 </div>
             </div>    
             <div class="grid__flex-container">
@@ -163,9 +162,9 @@
                             <li class="grid__list-item">Each attendee has an equal opportunity to speak in class</li>
                             <li class="grid__list-item">Pair work to maximise English speaking time</li>
                         </ul>
-                        <button class="grid__cta">
+                        <a href="#form" class="grid__cta">
                             Make an enquiry
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
