Rework bullet points and add new sub heading to hero

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <section class="hero">
             <div class="hero__text">
                 <h1 class="hero__title">Will Reidy</h1>
-                <p class="hero__intro">An experienced Cambridge DELTA-qualified <strong>English tutor</strong> with significant international and corporate experience in London and Madrid.</p>
+                <h2 class="hero__sub">English Trainer</h2>
+                <p class="hero__intro">A Cambridge DELTA-qualified <strong>English trainer</strong> with significant corporate and international experience, based in London.</p>
             </div>
             <!-- Add background image on mobile -->
             <div class="hero__image"></div>
@@ -42,12 +43,22 @@
         <section id="about" class="about">
             <div class="about__brief">
                 <ul class="about__keypoints">
-                    <li class="about__keypoint">&#10004;&nbsp;&nbsp;&nbsp;Highest available English teaching qualification</li>
-                    <li class="about__keypoint">&#10004;&nbsp;&nbsp;&nbsp;Experienced working with corporate clients</li>
-                    <li class="about__keypoint">&#10004;&nbsp;&nbsp;&nbsp;Worked in two of Europe's leading language schools</li>
-                    <li class="about__keypoint">&#10004;&nbsp;&nbsp;&nbsp;Fun, engaging lessons</li>
-                    <li class="about__keypoint">&#10004;&nbsp;&nbsp;&nbsp;Monthly progress reports</li>
-                    <li class="about__keypoint">&#10004;&nbsp;&nbsp;&nbsp;Digital lesson notes available online</li>
+                    <li class="about__keypoint">
+                        <div class="about__bullet">&#10004;</div>
+                        <div class="about__bullet-text">Award winning teacher at two of Europe's leading language schools</div>
+                    </li>
+                    <li class="about__keypoint">
+                        <div class="about__bullet">&#10004;</div>
+                        <div class="about__bullet-text">Highest available English teaching qualification</div>
+                    </li>
+                    <li class="about__keypoint">
+                        <div class="about__bullet">&#10004;</div>
+                        <div class="about__bullet-text">Experienced working with corporate clients</div>
+                    </li>
+                    <li class="about__keypoint">
+                        <div class="about__bullet">&#10004;</div>
+                        <div class="about__bullet-text">A specialist in helping clients achieve rapid improvements in their spoken and written English</div>
+                    </li>
                 </ul>
             </div>
 
@@ -113,7 +124,7 @@
                         Ashley Hsuan-Wen Hwang
                     </div>
                     <div class="testimonial__job">
-                        Job Title tbc
+                        Executive Assistant
                     </div>
                 </div>
             </div>
@@ -128,7 +139,7 @@
                     <h3 class="grid__title">
                         1-to-1 training
                     </h3>
-                    <p class="grid__intro">
+                    <p class="grid__intro grid__intro--extra">
                         1-to-1 training sessions allow for rapid individual development of a client's spoken and written English.
                     </p>
                     <p class="grid__intro">
@@ -138,7 +149,7 @@
                         <li class="grid__list-item">Fun, engaging lessons, tailored to your needs</li>
                         <li class="grid__list-item">We can focus your business English on a particular profession, such as technology or banking</li>
                         <li class="grid__list-item">Regular progress reports</li>
-                        <li class="grid__list-item">Personalised homework assignments &amp; lesson notes available online</li>
+                        <li class="grid__list-item">Personalised homework assignments &amp; digital lesson notes available online</li>
                     </ul>
                     <a href="#form" class="grid__cta">
                         Make an enquiry
@@ -155,7 +166,7 @@
                             Group training
                         </h3>
                         <p class="grid__intro">
-                            I can also provide English tuition services for small groups. Training in a positively charged environment, we work together to achieve our own goals. 
+                            I also provide English tuition services for small groups. Training in a positively charged environment, we work together to achieve our own goals. 
                         </p>
                         <ul class="grid__list">
                             <li class="grid__list-item">Upbeat, supportive environment</li>
@@ -211,7 +222,7 @@
         <section class="footer">
             <div class="footer__text">
                 <div class="footer__date">
-                    &copy;Will Reidy 2016
+                    &copy;Will Reidy 2017
                 </div>
                 <div class="footer__contact">
                     <a class="footer__mailto" href="mailto:will@willreidy.com?Subject=Lesson%20enquiry">
