Fine tune hero and about styling

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="hero__text">
                 <h1 class="hero__title">Will Reidy</h1>
                 <h2 class="hero__sub">English Trainer</h2>
-                <p class="hero__intro">A Cambridge DELTA-qualified <strong>English trainer</strong> with significant corporate and international experience, based in <strong>London</strong>.</p>
+                <p class="hero__intro">A Cambridge DELTA-qualified <strong>English Trainer</strong> with significant corporate and international experience, based in <strong>London</strong>.</p>
             </div>
             <!-- Add background image on mobile -->
             <div class="hero__image"></div>
